Adjusted project structure again, final time I think